fix listing thumb icon z-index problem

--- a/assets/css/all-listings.css
+++ b/assets/css/all-listings.css
@@ -16727,6 +16727,9 @@ input.directorist-toggle-input:checked + .directorist-toggle-input-label span.di
   display: -ms-flexbox;
   display: flex;
 }
+.directorist-content-active .directorist-listing-single.directorist-listing-no-thumb .directorist-listing-single__info {
+  z-index: 1;
+}
 .directorist-content-active .directorist-listing-single.directorist-listing-no-thumb .directorist-listing-single__header {
   -webkit-box-align: center;
   -webkit-align-items: center;
